--- a/analysis/covertMat.ipynb
+++ b/analysis/covertMat.ipynb
@@ -2,28 +2,98 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pickle\n",
-    "from scipy.io import savemat"
+    "from scipy.io import savemat\n",
+    "import sys\n",
+    "sys.path.append('..')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "expName = 'confirm'\n",
+    "expName = 'sweep'\n",
     "chnNames = ['PZ', 'PO5', 'POZ', 'PO3', 'PO4',\n",
     "            'PO6', 'PO7', 'PO8', 'O1', 'OZ', 'O2']\n",
     "\n",
     "dir = '../datasets/%s.pickle' % expName\n",
     "with open(dir, \"rb\") as fp:\n",
-    "    wholeset = pickle.load(fp)"
+    "    wholeset = pickle.load(fp)\n",
+    "\n",
+    "\n",
+    "rep  = wholeset[0]\n",
+    "\n",
+    "chnNames = ['PZ', 'PO5', 'POZ', 'PO4', 'PO6', 'O1', 'OZ','O2']\n",
+    "chnINX = [wholeset[0]['channel'].index(i) for i in chnNames]\n",
+    "\n",
+    "X = np.concatenate([sub['wn']['X'][:, chnINX] for sub in wholeset])\n",
+    "y = np.concatenate([sub['wn']['y'] for sub in wholeset])\n",
+    "S = rep['wn']['STI']\n",
+    "_class = np.unique(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<modeling.Code2EEG at 0x7fee399782b0>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from modeling import Code2EEG\n",
+    "srate = 240\n",
+    "winLEN = 1 \n",
+    "classNUM = 160\n",
+    "tmin, tmax = 0, .8\n",
+    "n_band = 1\n",
+    "# penalty\n",
+    "p = 0.9\n",
+    "\n",
+    "code2EEG = Code2EEG(srate=srate, winLEN=winLEN, tmin=tmin, tmax=tmax, S=(S, _class), estimator=p, padding=True, n_band=n_band, component=1)\n",
+    "code2EEG.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(160, 240)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern = np.squeeze(code2EEG.enhanced)\n",
+    "STI = S\n",
+    "\n",
+    "data=dict()\n",
+    "data['input'] = pattern\n",
+    "data['output'] = STI\n",
+    "\n",
+    "savemat(\"../mat/FRF.mat\", data)\n"
    ]
   },
   {
@@ -45,9 +115,7 @@
     "\n",
     "        data[paradigm] = X\n",
     "\n",
-    "    savemat(\"../mat/S_%s.mat\"%name, data)\n",
-    "\n",
-    "    "
+    "    savemat(\"../mat/S_%s.mat\"%name, data)\n"
    ]
   },
   {
