--- a/analysis/covertMat.ipynb
+++ b/analysis/covertMat.ipynb
@@ -93,7 +93,7 @@
     "data['input'] = pattern\n",
     "data['output'] = STI\n",
     "\n",
-    "savemat(\"../mat/FRF.mat\", data)\n"
+    "savemat(\"../mat/FRF.mat\", data)"
    ]
   },
   {
