--- a/plotFigure/plot.ipynb
+++ b/plotFigure/plot.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/shinanlin/opt/anaconda3/lib/python3.8/site-packages/pandas/core/computation/expressions.py:20: UserWarning: Pandas requires version '2.7.3' or newer of 'numexpr' (version '2.7.1' currently installed).\n",
+      "  from pandas.core.computation.check import NUMEXPR_INSTALLED\n",
+      "/Users/shinanlin/opt/anaconda3/lib/python3.8/site-packages/numba/core/types/__init__.py:108: FutureWarning: In the future `np.long` will be defined as the corresponding NumPy scalar.  (This may have returned Python scalars in past versions.\n"
+     ]
+    }
+   ],
    "source": [
     "from plotnine.data import *\n",
     "from plotnine import *\n",
@@ -63,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3879,7 +3889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -3926,125 +3936,125 @@
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.021516</td>\n",
-       "      <td>4.713826</td>\n",
-       "      <td>3.592164</td>\n",
-       "      <td>3.728833</td>\n",
-       "      <td>1.689765</td>\n",
-       "      <td>78.534016</td>\n",
-       "      <td>6.924827e-13</td>\n",
-       "      <td>1.927759e-13</td>\n",
-       "      <td>11128.676004</td>\n",
-       "      <td>8.852586e-13</td>\n",
+       "      <td>0.124245</td>\n",
+       "      <td>4.843154</td>\n",
+       "      <td>0.648406</td>\n",
+       "      <td>2.360151</td>\n",
+       "      <td>10.532692</td>\n",
+       "      <td>84.773582</td>\n",
+       "      <td>0.001791</td>\n",
+       "      <td>0.002762</td>\n",
+       "      <td>0.167519</td>\n",
+       "      <td>0.003797</td>\n",
        "      <td>0.311847</td>\n",
        "      <td>yangyuxing</td>\n",
-       "      <td>155.136107</td>\n",
-       "      <td>(24.50618423384747+0j)</td>\n",
+       "      <td>159.659165</td>\n",
+       "      <td>(25.75057077613173+0j)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>0.018425</td>\n",
-       "      <td>4.740165</td>\n",
-       "      <td>3.658843</td>\n",
-       "      <td>5.948804</td>\n",
-       "      <td>1.856543</td>\n",
-       "      <td>100.764188</td>\n",
-       "      <td>7.632704e-13</td>\n",
-       "      <td>2.086098e-13</td>\n",
-       "      <td>15614.705382</td>\n",
-       "      <td>9.718802e-13</td>\n",
+       "      <td>0.127632</td>\n",
+       "      <td>5.016451</td>\n",
+       "      <td>2.274346</td>\n",
+       "      <td>4.071358</td>\n",
+       "      <td>12.827515</td>\n",
+       "      <td>100.503647</td>\n",
+       "      <td>0.001934</td>\n",
+       "      <td>0.000850</td>\n",
+       "      <td>1.854513</td>\n",
+       "      <td>0.002127</td>\n",
        "      <td>0.397217</td>\n",
        "      <td>yangyuxing</td>\n",
-       "      <td>155.136107</td>\n",
-       "      <td>(24.50618423384747+0j)</td>\n",
+       "      <td>159.659165</td>\n",
+       "      <td>(25.75057077613173+0j)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>0.028503</td>\n",
-       "      <td>4.780712</td>\n",
-       "      <td>3.780281</td>\n",
-       "      <td>8.205899</td>\n",
-       "      <td>2.255682</td>\n",
-       "      <td>79.137561</td>\n",
-       "      <td>9.139129e-13</td>\n",
-       "      <td>2.417579e-13</td>\n",
-       "      <td>43632.747063</td>\n",
-       "      <td>1.155671e-12</td>\n",
+       "      <td>0.258352</td>\n",
+       "      <td>5.347986</td>\n",
+       "      <td>6.327910</td>\n",
+       "      <td>6.944759</td>\n",
+       "      <td>17.373388</td>\n",
+       "      <td>67.246924</td>\n",
+       "      <td>0.003557</td>\n",
+       "      <td>0.000562</td>\n",
+       "      <td>2.247578</td>\n",
+       "      <td>0.002952</td>\n",
        "      <td>0.299989</td>\n",
        "      <td>yangyuxing</td>\n",
-       "      <td>155.136107</td>\n",
-       "      <td>(24.50618423384747+0j)</td>\n",
+       "      <td>159.659165</td>\n",
+       "      <td>(25.75057077613173+0j)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>0.040098</td>\n",
-       "      <td>4.837431</td>\n",
-       "      <td>3.952837</td>\n",
-       "      <td>10.514154</td>\n",
-       "      <td>3.101567</td>\n",
-       "      <td>77.350184</td>\n",
-       "      <td>1.236394e-12</td>\n",
-       "      <td>3.127866e-13</td>\n",
-       "      <td>20752.283527</td>\n",
-       "      <td>1.549181e-12</td>\n",
+       "      <td>0.426690</td>\n",
+       "      <td>5.860659</td>\n",
+       "      <td>7.549239</td>\n",
+       "      <td>10.040555</td>\n",
+       "      <td>28.673120</td>\n",
+       "      <td>67.198889</td>\n",
+       "      <td>0.003715</td>\n",
+       "      <td>0.000492</td>\n",
+       "      <td>1.844879</td>\n",
+       "      <td>0.002968</td>\n",
        "      <td>0.308399</td>\n",
        "      <td>yangyuxing</td>\n",
-       "      <td>155.136107</td>\n",
-       "      <td>(24.50618423384747+0j)</td>\n",
+       "      <td>159.659165</td>\n",
+       "      <td>(25.75057077613173+0j)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>5</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>0.076027</td>\n",
-       "      <td>4.943145</td>\n",
-       "      <td>4.032661</td>\n",
-       "      <td>12.845476</td>\n",
-       "      <td>6.153201</td>\n",
-       "      <td>80.934510</td>\n",
-       "      <td>2.206189e-12</td>\n",
-       "      <td>5.470802e-13</td>\n",
-       "      <td>48850.878505</td>\n",
-       "      <td>2.753269e-12</td>\n",
+       "      <td>0.849214</td>\n",
+       "      <td>6.747571</td>\n",
+       "      <td>6.482089</td>\n",
+       "      <td>12.943996</td>\n",
+       "      <td>48.219228</td>\n",
+       "      <td>56.781024</td>\n",
+       "      <td>0.003360</td>\n",
+       "      <td>0.000518</td>\n",
+       "      <td>3.124120</td>\n",
+       "      <td>0.002810</td>\n",
        "      <td>0.327070</td>\n",
        "      <td>yangyuxing</td>\n",
-       "      <td>155.136107</td>\n",
-       "      <td>(24.50618423384747+0j)</td>\n",
+       "      <td>159.659165</td>\n",
+       "      <td>(25.75057077613173+0j)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0    f     lbSNR    lbrate     ubSNR     ubrate        SS  \\\n",
-       "1           1  1.0  0.021516  4.713826  3.592164   3.728833  1.689765   \n",
-       "2           2  2.0  0.018425  4.740165  3.658843   5.948804  1.856543   \n",
-       "3           3  3.0  0.028503  4.780712  3.780281   8.205899  2.255682   \n",
-       "4           4  4.0  0.040098  4.837431  3.952837  10.514154  3.101567   \n",
-       "5           5  5.0  0.076027  4.943145  4.032661  12.845476  6.153201   \n",
+       "   Unnamed: 0    f     lbSNR    lbrate     ubSNR     ubrate         SS  \\\n",
+       "1           1  1.0  0.124245  4.843154  0.648406   2.360151  10.532692   \n",
+       "2           2  2.0  0.127632  5.016451  2.274346   4.071358  12.827515   \n",
+       "3           3  3.0  0.258352  5.347986  6.327910   6.944759  17.373388   \n",
+       "4           4  4.0  0.426690  5.860659  7.549239  10.040555  28.673120   \n",
+       "5           5  5.0  0.849214  6.747571  6.482089  12.943996  48.219228   \n",
        "\n",
-       "           NN        sPower        nPower            Hf             X  \\\n",
-       "1   78.534016  6.924827e-13  1.927759e-13  11128.676004  8.852586e-13   \n",
-       "2  100.764188  7.632704e-13  2.086098e-13  15614.705382  9.718802e-13   \n",
-       "3   79.137561  9.139129e-13  2.417579e-13  43632.747063  1.155671e-12   \n",
-       "4   77.350184  1.236394e-12  3.127866e-13  20752.283527  1.549181e-12   \n",
-       "5   80.934510  2.206189e-12  5.470802e-13  48850.878505  2.753269e-12   \n",
+       "           NN    sPower    nPower        Hf         X       STI     subject  \\\n",
+       "1   84.773582  0.001791  0.002762  0.167519  0.003797  0.311847  yangyuxing   \n",
+       "2  100.503647  0.001934  0.000850  1.854513  0.002127  0.397217  yangyuxing   \n",
+       "3   67.246924  0.003557  0.000562  2.247578  0.002952  0.299989  yangyuxing   \n",
+       "4   67.198889  0.003715  0.000492  1.844879  0.002968  0.308399  yangyuxing   \n",
+       "5   56.781024  0.003360  0.000518  3.124120  0.002810  0.327070  yangyuxing   \n",
        "\n",
-       "        STI     subject      ubINFO                  lbINFO  \n",
-       "1  0.311847  yangyuxing  155.136107  (24.50618423384747+0j)  \n",
-       "2  0.397217  yangyuxing  155.136107  (24.50618423384747+0j)  \n",
-       "3  0.299989  yangyuxing  155.136107  (24.50618423384747+0j)  \n",
-       "4  0.308399  yangyuxing  155.136107  (24.50618423384747+0j)  \n",
-       "5  0.327070  yangyuxing  155.136107  (24.50618423384747+0j)  "
+       "       ubINFO                  lbINFO  \n",
+       "1  159.659165  (25.75057077613173+0j)  \n",
+       "2  159.659165  (25.75057077613173+0j)  \n",
+       "3  159.659165  (25.75057077613173+0j)  \n",
+       "4  159.659165  (25.75057077613173+0j)  \n",
+       "5  159.659165  (25.75057077613173+0j)  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
